Fixed text scaling on mobile

--- a/main.css
+++ b/main.css
@@ -5,11 +5,9 @@
 	--color-foreground:					black;
 	--color-light:						grey;
 	/*menu*/
-	--color-menu-text:					white;
-	--color-menu-highlight-text:		black;
-	--color-menu-higliight-background:	white;
 	--content-width:					1200px;
-	--content-padding:					6vw;
+	--icon-size:						5em;
+	--project-margin:					2.5em;
 }
 
 *{
@@ -17,166 +15,168 @@
 	font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
+h1{
+	margin-top: 2em;
+	font-size: 2em;
+}
+
+h2{
+	font-size: 1.5em;
+	margin: 0;
+}
+
+h3{
+	font-size: 1.5em;
+	margin: 0;
+	text-transform: uppercase;
+}
+
+h4{
+	font-size: 1em;
+	font-weight: 600;
+	text-transform: uppercase;
+	color: var(--color-light);
+	margin: 0;
+}
+
 html{
 	background-color: var(--color-base);
 	background-image: url("Images/line.gif");
 	background-repeat: repeat-x;
+	overflow: auto;
 }
 
 body{
 	background-color: var(--color-background);
-	max-width: var(--content-width);
-	display: flex;
-	flex-direction: column;
-	margin: 0 auto;
-}
-
-header{
 	background-image: url("Images/line.gif");
 	background-repeat: repeat-x;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	padding: 0 var(--content-padding);
-	img{
-		flex: 0 0;
-	}
-	nav{
-		visibility: visible;
-		flex: 1	1 auto;
-		display: flex;
-		justify-content: space-between;
-	}
-}
-
-nav	a{
-	color: var(--color-menu-text);
-	font-size: larger;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	flex: 1	0;
-}
-
-nav	a:hover{
-	color: var(--color-menu-highlight-text);
-	background-color: var(--color-menu-higliight-background);
-}
-
-ul{
-	list-style: none;	
+	max-width: var(--content-width);
+	margin: 0 auto;
+	padding: 0 3em;
+	overflow: auto;
 }
 
 main{
-	padding: 0 var(--content-padding);
-}
 
-h1{
 	text-align: center;
-	margin: 3em 0 2em;
-}
-
-#about p{
-	width: 80%;
-	margin: auto;
-	text-align: center;
-}
-
-#links{
-	width: 80%;
-	margin: auto;
-	display: flex;
-	overflow-wrap: normal;
-	justify-content: space-evenly;
-	align-items: center;
-	padding: 0.5em 0;
-	a{
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 150px;
-		height: 45px;
-		color: var(--color-foreground);
-		text-decoration: none;
-		text-transform: uppercase;
-		border: 1px solid var(--color-foreground);
-		margin-top: 2em;
-	}
-	a:hover{
-		color: var(--color-background);
-		background-color: var(--color-foreground);
-	}
-}
-
-@media screen and (max-width: 580px) {
-	#links {
-	  flex-direction: column;
-	}
 }
 
 i{
 	margin-right: 0.5em;
 }
 
-.position{
-	display: flex;
-	align-items: center;
-	img{
-		width: 8%;
-		height: 8%;
-		margin: 1%;
-	}
-	h1{
-		text-align: left;
-		font-size: large;
-		margin: 0;
-	}
-	h2{
-		color: var(--color-light);
-		text-align: left;
-		font-size: small;
-		text-transform: uppercase;
-		margin: 0;
-	}
+#about p{
+	margin: 0 var(--icon-size);
+	text-align: center;
 }
 
-#projects{
-	section{
-		margin: 0 5%;
-		padding: 0 5%;
-		border-left: 3px dotted var(--color-foreground);
-	}
+#links{
+	margin-top: 2em;
+}
+
+a{
+	color: var(--color-foreground);
+	border: 1px solid var(--color-foreground);
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	display: inline-block;
+	width: 12em;
+	height: 3em;
+	line-height: 3em;
+	margin: 1em 3em;
+}
+
+a:hover{
+	color: var(--color-background);
+	background-color: var(--color-foreground);
+}
+
+.position{
+	height: var(--icon-size);
+	text-align: left;
+	display: flex;
+	align-items: center;
+}
+
+.position hgroup{
+	display: inline;
+	margin-left: var(--project-margin);
+}
+
+.position > img{
+	width: var(--icon-size);
+	height: var(--icon-size);
+	float: left;
+}
+
+#projects section{
+	border-left: 3px dotted var(--color-foreground);
+	margin:  0 calc(var(--icon-size)/2);
+	padding: 0 calc(var(--icon-size)/2);
 }
 
 .project{
+	margin: var(--project-margin);
+	padding: 2.5em;
+	text-align: left;
 	background-color: var(--color-project-background);
-	padding: 5vmin;
 	box-shadow: 5px 5px 10px lightgrey;
 	overflow: auto;
-	h1{
-		margin: 0;
-		text-align: left;
-		font-size: large;
-	}
-	.graphic{
-		width:427px;
-		height: 240px;
-		margin-right: 2vmin;
-		background-color: gray;
-		float: left;
-	}
-	p{
-		text-align: justify;
-	}
-	.genre::before{
-		content: "GENRE: ";
-	}
-	.involvement::before{
-		content: "INVOLVEMENT: ";
-	}
 }
 
-.project + .project{
-	margin-top: 2em;
+.project .genre::before{
+	content: "GENRE: ";
+	color: var(--color-light);
+	font-weight: 600;
+}
+
+.project .involvement::before{
+	content: "INVOLVEMENT: ";
+	color: var(--color-light);
+	font-weight: 600;
+}
+
+.project ul{
+	padding-left: 0;
+}
+
+.project li{
+	display: inline;
+}
+
+.project li + li::before{
+	content: " | ";
+}
+
+.graphic{
+	width:427px;
+	height: 240px;
+	margin: 0 1em 0 0;
+	background-color: gray;
+	float: left;
+}
+
+
+@media screen and (max-width: 1042px) {
+	header{
+		text-align: center;
+	}
+	a{
+		display: block;
+		margin: 2em auto;
+	}
+	.position{
+		margin-left: var(--project-margin);
+	}
+	#projects section{
+		border-left: none;
+		margin: 0;
+		padding: 0;
+	}
+	.graphic{
+		float: none;
+		display: block;
+		margin: 0 auto 1em;
+	}
 }
